@@ -1,4 +1,5 @@
 0.10
+ - Add default value for boolean values in Input.
 
 0.09 2024-01-06T19:35:12+01:00
  - Add check for CSS class.
